fixing overlapping text-area

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -191,7 +191,7 @@ form label {
     text-transform: uppercase;
 }
  .calculator-form {
-     padding-top: 10px;
+     padding: 10px;
     width: 100%;
     height: auto;
      border: 2px solid #444444;
